# QuasiGraph

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.cpp  bitparallel_bench  bitparallel_bench.cpp  ordering_bench.cpp  parallel_bench.cpp
examples/: basic_usage.cpp  main.cpp
include/QuasiGraph/: BitSet.h  Graph.h  IndependentSet.h  ParallelBnB.h  QuasiGraph.h  QuasiPolynomial.h  SocialNetworkAnalysis.h  StructuralDecomposition.h  VertexOrdering.h
src/: Graph.cpp  IndependentSet.cpp  QuasiPolynomial.cpp  SocialNetworkAnalysis.cpp  StructuralDecomposition.cpp  VertexOrdering.cpp
tests/: CMakeLists.txt  basic_tests  basic_tests.cpp
